# IMath

./: Makefile  README.md
CMath/src/: main.cpp
CMath/src/maths/: rpComplex.hpp  rpLine3D.hpp  rpLineSegment3D.hpp  rpLorentzVector.hpp  rpOctonion.hpp  rpQuaternion.hpp  rpRay.hpp  rpVector3D.hpp
src/: CMakeLists.txt  main.cpp
src/IMath/: IAffineTransform.h  IAlgebra.h  IAxisAlignedBox3D.h  IComplex.h  IFunc.h  ILine3D.h  ILineSegment3D.h  ILorentzVector.h  IMaths.h  IMatrix.h  IMatrix2x2.h  IMatrix3x3.h  IMatrix4x4.h  IOctonion.h  IOctonion.hpp  IPlane.h  IQuaternion.h  IRay.h  IReal.h  IScalarType.h  ISpherical.h  ITransform.h  IVector.h  IVector2D.h  IVector3D.h  IVector4D.h  iFunc.h
src/maths/: IAffineTransform.h  IComplex.h  IFunc.h  ILorentzVector.h  IMatrix.h  IMatrix2x2.h  IMatrix3x3.h  IMatrix4x4.h  IOctonion.h  IQuaternion.h  IReal.h  IScalarType.h  ITransform.h  IVector.h  IVector2D.h  IVector3D.h  IVector4D.h  IVectorType.h  func.hpp  imaths.h  maths.h  rpMatrix2x2.hpp  rpMatrix3x3.hpp  rpMatrix4x4.hpp  rpPlane.hpp  rpTransform.hpp  rpVector2D.hpp  rpVector4D.hpp
